Fix fonts location

--- a/src/style.css
+++ b/src/style.css
@@ -29,8 +29,8 @@ button:hover {
 /* Style */
 @font-face {
     font-family: 'Indie Flower';
-    src: url('../fonts/IndieFlower.woff2') format('woff2'),
-        url('../fonts/IndieFlower.woff') format('woff');
+    src: url('./fonts/IndieFlower.woff2') format('woff2'),
+        url('./fonts/IndieFlower.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
